# birthday_bot

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  app.py  buttons.py  compose.yaml  dictionary-main.html  handlers.py  main.py  models.py  pyproject.toml  query.py  queues.py  requirements.txt  router.py  search-page.html  single-term copy.html  single-term.html  states.py  style.css  tasks.py  tes.py
app/: app.py  handlers.py  query.py  queues.py  router.py  states.py
app/__pycache__/: handlers.py
buttons/: buttons.py
config/: config.py
docker/: Dockerfile  compose.yaml
handlers/: group_handlers.py
migrations/: env.py
migrations/versions/: 4b5cd7e1f021_reset.py  4e81f38891ab_lang_desc.py  bf3424f0d557_fields_deleted_birthdays_group_id_group_.py  e359d2792fbd_group_id_changed.py
models/: models.py
schemas/: schema.py
tasks/: query.py  tasks.py
